--- a/PETSHOP FINAL/jugueteria.html
+++ b/PETSHOP FINAL/jugueteria.html
@@ -18,9 +18,9 @@
 
 <body>
     <div id="app">
-        <header>
+        <header id="header"> 
             {{filtro}}
-            <nav class="navbar navbar-expand-md bg-verdeO" id="nav">
+            <nav class="navbar navbar-expand-md bg-verdeO">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
                         <img src="./assets/img/losChicuelosletra.png" alt="" id="letrasChicuelos" style="max-width: 6rem;">
@@ -70,7 +70,6 @@
                     </div>
                 </div>
             </nav>
-            
         </header>
         <main class="container-fluid p-0 m-0 d-flex flex-column gap-2">
             <div v-if="buscador ==''" class="container-fluid p-0">
@@ -137,30 +136,20 @@
                         </div>
                     </div>
                 </div>
-                    <!-- <div v-for="producto in productos" class="card border-verdeO" id="card" data-aos="zoom-in-up">
-                        <img :src="producto.imagen" class="card-img-top h-50" alt="{{producto.nombre}}" >
-                        <div class="card-body d-flex flex-column justify-content-between border-top bg-cremita">
-                            <h3 class="card-title text-center fw-bolder text-orange" style="height: 2rem;">{{producto.nombre}}</h3>
-                            <p class="card-text text-center fw-light" style="height: 2rem;">Precio:<span class="text-success">$</span>{{producto.precio}}</p>
-                            <div class="d-flex justify-content-around" >
-                                <a :href="'./detalles.html?id='+producto._id" class="btn bg-cremitaO text-black p-2 m-0 align-self-center justify-content-center" id="botonDetalles">Detalles</a>
-                                <a :href="" class="btn text-white p-0 m-0 " id="botonCarrito">
-                                    <img src="https://http2.mlstatic.com/storage/developers-site-cms-admin/CDV_ML/279086414570-2106-mla-mlc-mco-como-funciona-el-carrito-de-compras-de-mercado-libre-icono-01.png" alt="" style="width: 3rem;" >
-                                </a>
-                            </div>
-                        </div>
-                    </div> -->
-                </div>
+            </div>
+            <div id="arriba" >
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z"/>
+                </svg>
+                <a href="#header">
+                    <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
+                    style="max-width: 2.5rem;">
+                </a>
             </div>
         </main>
         <footer class="container-fluid bg-verdeO d-flex  align-content-center justify-content-center">
             <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2 p-1">
-                <div class="d-flex justify-content-center align-items-center">
-                    <a href="#nav">
-                        <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
-                        style="max-width: 3rem;">
-                    </a>
-                </div>
+            
                 <div class="d-flex  ms-2 me-2">
                     <p class="text-white text-center fw-bold m-0">Nuestas redes:</p>
                     <div class="align-self-center ms-2">
